# qfetch

./: Cargo.toml  README.md  build.rs  config.yaml  flake.nix
.github/: dependabot.yml
.github/workflows/: flakehub-publish-tagged.yml
src/: config.rs  main.rs  sysinfo.rs
