[package]
name = "qfetch-cli"
description = "A blazing fast, highly configurable and lightweight fetch tool written in Rust."
license = "GPL-3.0-only"
repository = "https://github.com/quixaq/qfetch"
readme = "README.md"
keywords = ["cli", "fetch", "system", "linux", "system-info"]
categories = ["command-line-utilities"]
version = "0.1.1"
edition = "2024"

[dependencies]
console = "0.16.2"
getgpuname = "0.1.0"
gethostname = "1.1.0"
size = "0.5.0"
terminal_size = "0.4.4"

[build-dependencies]
console = "0.16.2"
serde = { version = "1.0.228", features = [ "derive" ]}
serde_yaml = "0.9.34"
